--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    buildToolsVersion '25.0.0'
 
     defaultConfig {
         applicationId "com.example.retrofit"
@@ -24,10 +24,12 @@ android {
 
 
 dependencies {
+    compile project(':rxretrofitlibrary')
     compile 'com.daimajia.numberprogressbar:library:1.2@aar'
     compile 'com.github.bumptech.glide:glide:3.6.1'
     compile 'com.jude:easyrecyclerview:4.2.6'
-    compile 'com.android.support:recyclerview-v7:23.1.0'
+    compile 'com.android.support:recyclerview-v7:23.4.0'
     compile 'com.alibaba:fastjson:latest.integration'
-    compile project(':rxretrofitlibrary')
+    compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
 }
