--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.example.retrofit"
-          xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          package="com.example.retrofit">
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <!-- 网络状态权限 -->
@@ -23,6 +23,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.DownLaodActivity">
+        </activity>
+        <activity android:name=".activity.GankTestActivity">
         </activity>
     </application>
 
